# hgen

./: README.md  hgen.cabal
examples/: .Sudoku.hs.swo  Sudoku.hs
src/: .Hgen.hs.swo  .Population.hs.swo  Hgen.hs  Lib.hs  Population.hs
