name:                hgen
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/AgustinCB/hgen#readme
license:             BSD3
license-file:        LICENSE
author:              Agustin Chiappe Berrini
maintainer:          example@example.com
copyright:           2017 Agustin Chiappe Berrini
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  ghc-options:         -XStandaloneDeriving
  hs-source-dirs:      src
  exposed-modules:     Hgen
  other-modules:       Population
  build-depends:       base >= 4.7 && < 5
                     , random
                     , array
  default-language:    Haskell2010

executable "sudoku"
  ghc-options:         -XStandaloneDeriving
  build-depends:       base >= 4.7 && < 5
                     , random
                     , hgen
  default-language:    Haskell2010
  main-is:             Sudoku.hs
  hs-source-dirs:      examples

source-repository head
  type:     git
  location: https://github.com/AgustinCB/hgen
